providers/google-compute-engine/src/test/resources/GoogleComputeEngineServiceExpectTest/firewall_list.json
{
   "kind": "compute#firewallList",
   "id": "projects/google/firewalls",
   "selfLink": "https://www.googleapis.com/compute/v1/projects/google/global/firewalls",
   "items": [
      {

         "kind": "compute#firewall",
         "id": "12862241031274216284",
         "creationTimestamp": "2012-04-13T03:05:02.855",
         "selfLink": "https://www.googleapis.com/compute/v1/projects/party/global/firewalls/jclouds-test-delete",
         "name": "jclouds-test-delete",
         "description": "Internal traffic from default allowed",
         "network": "https://www.googleapis.com/compute/v1/projects/party/global/networks/jclouds-test-delete",
         "sourceRanges": [
            "10.0.0.0/8"
         ],
         "allowed": [
            {
               "IPProtocol": "tcp",
               "ports": [
                  "1-65535"
               ]
            },
            {
               "IPProtocol": "udp",
               "ports": [
                  "1-65535"
               ]
            },
            {
               "IPProtocol": "icmp"
            }
         ]
      }
   ]
}
